test/bad/tuples/decl01.px

t: Rat*Int = 0.1, 0.2
